fix: hide zoom buttons on mobile for iframe topics using css

--- a/src/components/TrafimageMaps/TrafimageMaps.scss
+++ b/src/components/TrafimageMaps/TrafimageMaps.scss
@@ -435,4 +435,12 @@
       }
     }
   }
-}
+
+  /* Topic spezifische css */
+  &.ch-sbb-directverbindungen-iframe {
+  &.ch-sbb-geltungsbereiche-iframe {
+    &.tm-w-xs .wkp-map-controls {
+      display:none;
+    }
+  }
+}}
